--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         </article>
           <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-          <div class="container menu pt-3 pb-3">
+          <div class="container menu">
             <a class="navbar-brand" href="#">
               <img src="img/logo.png" alt="">
             </a>
