--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar">
 
     <section id="homepage">
+
         <article class="header">
 
           <div class="contact">
@@ -29,7 +30,7 @@
           </div>
           <div class="our-register">
 
-               <p><a href="">Register</a> / <a href="">Log in</a></p>
+               <p><a id="open-form">Register</a> / <a href="">Log in</a></p>
                <div class="register-icons">
 
                 <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
@@ -40,7 +41,8 @@
                </div>
           </div>
         </article>
-          <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+
+          <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container menu">
             <a class="navbar-brand" href="#">
               <img src="img/logo.png" alt="">
@@ -51,7 +53,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link" aria-current="page" href="#homepage">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">About</a>
@@ -82,15 +84,56 @@
             </div>
           </div>
           </nav>
+
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">Slide 1</div>
-              <div class="swiper-slide">Slide 2</div>
+
+              <div class="swiper-slide">
+
+                <h1 data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100" data-aos-duration="1000">Consult Your Business With Us</h1>
+                <p data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100" data-aos-duration="1000">We are the unique Consultancy Farm for your business solution, That is ready to take challenge and knockout your business problems.</p>
+                <div class="btns" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100" data-aos-duration="1000">
+                  <a href="" class="btn rounded-0">get started</a>
+                  <a href="" class="btn rounded-0">explore more</a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <h1 data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100" data-aos-duration="1000">Consult Your Business</h1>
+                <p data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100" data-aos-duration="1000">We are the unique Consultancy Farm for your business solution, That is ready to take challenge and knockout your business problems.</p>
+                <div class="btns" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100" data-aos-duration="1000">
+                    <a href="" class="btn rounded-0">get started</a>
+                    <a href="" class="btn rounded-0">explore more</a>
+                </div>
+              </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next">
+              <a href=""><i class="fa-solid fa-circle-chevron-right"></i></a>
+            </div>
+            <div class="swiper-button-prev">
+              <a href=""><i class="fa-solid fa-circle-chevron-left"></i></a>
+            </div>
           </div>
+
+          <div id="register-form">
+            <form>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control rounded-0" id="exampleInputPassword1">
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+            <div id="square">
+              <i class="fa-solid fa-xmark"></i>
+            </div>
+          </div>
+
+          
     </section>
+
 
    
     
@@ -122,6 +165,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="main.js"></script>
 </body>
 </html>
