--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar">
 
-    <section id="homepage">
+  <section id="homepage">
 
         <article class="header">
 
@@ -53,31 +53,31 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#homepage">Home</a>
+                  <a class="nav-link animate__animated animate__slideInUp" aria-current="page" href="#homepage">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link animate__animated animate__slideInUp" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Service</a>
+                  <a class="nav-link animate__animated animate__slideInUp" href="#">Service</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Project</a>
+                  <a class="nav-link animate__animated animate__slideInUp" href="#">Project</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Team</a>
+                  <a class="nav-link animate__animated animate__slideInUp" href="#">Team</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
+                  <a class="nav-link animate__animated animate__slideInUp" href="#">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link animate__animated animate__slideInUp" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                  <a class="nav-link animate__animated animate__slideInUp" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                  <a class="nav-link animate__animated animate__slideInUp" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                 </li>
                 
               </ul>
@@ -132,7 +132,35 @@
           </div>
 
           
-    </section>
+  </section>
+
+  <section id="whatWeDo">
+    <h3>what we do</h3>
+    <p>Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+    <article class="what-cards">
+
+      <div class="what-card" data-aos="zoom-in">
+        <img src="img/consultency.png" alt="">
+
+        <h3>business consultancy</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ul.</p>
+      </div>
+      <div class="what-card" data-aos="zoom-in">
+        <img src="img/busisness_grow.png" alt="">
+
+        <h3>help to grow business</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ul.</p>
+      </div>
+      <div class="what-card" data-aos="zoom-in">
+        <img src="img/support-logo.png" alt="">
+
+        <h3>great support</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ul.</p>
+      </div>
+
+    </article>
+  </section>
 
 
    
