I finished move number part

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#aboutUs">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#">Service</a>
+                  <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#ourService">Service</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#">Project</a>
@@ -131,7 +131,6 @@
             </div>
           </div>   
   </section>
-
   <section id="whatWeDo">
     <h3>what we do</h3>
     <p>Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -159,7 +158,6 @@
 
     </article>
   </section>
-
   <section id="aboutUs">
     
     <article class="about-text" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="250">
@@ -173,7 +171,6 @@
       <div class="square"></div>
     </article>
   </section>
-
   <section id="ourService">
     <h3>our services</h3>
     <p>Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -224,6 +221,57 @@
       </div>
     </article>
   </section>
+  <section id="statistics">
+    <div class="container">
+      <div class="row">
+
+        <article class="Days-worked col-lg-3 col-md-6">
+
+          <div class="day-image">
+            <img src="img/counter1.png" alt="">
+          </div>
+          <div class="day-text">
+            <h3 data-val="2556" class="number"></h3>
+            <p>Days Worked</p>
+          </div>
+        </article>
+        <article class="Project-finished col-lg-3 col-md-6">
+
+          <div class="project-image">
+            <img src="img/counter2.png" alt="">
+          </div>
+          <div class="day-text">
+            <h3 data-val="326" class="number"></h3>
+            <p>Project Finished</p>
+          </div>
+        </article>
+        <article class="Coffee Cup col-lg-3 col-md-6">
+
+          <div class="project-image">
+            <img src="img/counter3.png" alt="">
+          </div>
+          <div class="day-text">
+            <h3 data-val="1526" class="number"></h3>
+            <p>Coffee Cup</p>
+          </div>
+        </article>
+        <article class="Coffee Cup col-lg-3 col-md-6">
+
+          <div class="project-image">
+            <img src="img/counter4.png" alt="">
+          </div>
+          <div class="day-text">
+            <h3 data-val="856" class="number"></h3>
+            <p>Client Satisfied</p>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+  <a href="#homepage" id="scroll-button">
+    <i class="fa-solid fa-angle-up"></i>
+  </a>
+  
 
 
    
