I finished project part

--- a/index.html
+++ b/index.html
@@ -268,9 +268,66 @@
       </div>
     </div>
   </section>
-  <a href="#homepage" id="scroll-button">
+  <a href="#homepage" class="scroll-button">
     <i class="fa-solid fa-angle-up"></i>
   </a>
+  <section id="project">
+    <h3>Our finished Projects</h3>
+    <p>Pallamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+    <article class="project-images">
+
+      <div class="single-img">
+        <img src="img/project1.jpg" alt="">
+        <div class="text">
+          <i class="fa-solid fa-link"></i>
+          <h3>Aquisition Plan</h3>
+          <p>Busisness Planning</p>
+        </div>
+      </div>
+      <div class="gallery-images">
+
+        <div class="gallery-img">
+          <img src="img/project2.jpg" alt="">
+
+          <div class="text">
+            <i class="fa-solid fa-link"></i>
+            <h3>Aquisition Plan</h3>
+            <p>Busisness Planning</p>
+          </div>
+        </div>
+        <div class="gallery-img">
+          <img src="img/project3.jpg" alt="">
+
+          <div class="text">
+            <i class="fa-solid fa-link"></i>
+            <h3>Aquisition Plan</h3>
+            <p>Busisness Planning</p>
+          </div>
+        </div>
+        <div class="gallery-img">
+          <img src="img/project4.jpg" alt="">
+
+          <div class="text">
+            <i class="fa-solid fa-link"></i>
+            <h3>Aquisition Plan</h3>
+            <p>Busisness Planning</p>
+          </div>
+        </div>
+        <div class="gallery-img">
+          <img src="img/project5.jpg" alt="">
+
+          <div class="text">
+            <i class="fa-solid fa-link"></i>
+            <h3>Aquisition Plan</h3>
+            <p>Busisness Planning</p>
+          </div>
+        </div>
+
+      </div>
+    </article>
+    <a href="" class="btn-project">view all</a>
+  </section>
   
 
 
