I have got a problem with team-part

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                   <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#ourService">Service</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#">Project</a>
+                  <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#project">Project</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#">Team</a>
+                  <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#ourTeam">Team</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#">Blog</a>
@@ -277,7 +277,7 @@
 
     <article class="project-images">
 
-      <div class="single-img">
+      <div class="single-img"  data-aos="zoom-in-up" data-aos-delay="50" data-aos-delay="150">
         <img src="img/project1.jpg" alt="">
         <div class="text">
           <i class="fa-solid fa-link"></i>
@@ -287,7 +287,7 @@
       </div>
       <div class="gallery-images">
 
-        <div class="gallery-img">
+        <div class="gallery-img" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="100">
           <img src="img/project2.jpg" alt="">
 
           <div class="text">
@@ -296,7 +296,7 @@
             <p>Busisness Planning</p>
           </div>
         </div>
-        <div class="gallery-img">
+        <div class="gallery-img" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="100">
           <img src="img/project3.jpg" alt="">
 
           <div class="text">
@@ -305,7 +305,7 @@
             <p>Busisness Planning</p>
           </div>
         </div>
-        <div class="gallery-img">
+        <div class="gallery-img" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="100">
           <img src="img/project4.jpg" alt="">
 
           <div class="text">
@@ -314,7 +314,7 @@
             <p>Busisness Planning</p>
           </div>
         </div>
-        <div class="gallery-img">
+        <div class="gallery-img" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="100">
           <img src="img/project5.jpg" alt="">
 
           <div class="text">
@@ -327,6 +327,116 @@
       </div>
     </article>
     <a href="" class="btn-project">view all</a>
+  </section>
+
+  <section id="ourTeam">
+    <h3>our expert Team</h3>
+    <p class="title-p">Pallamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+
+    <div class="box">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team1.webp" alt="">
+
+            <div class="text">
+              <p>Tom Hanks</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team2.jpg" alt="">
+
+            <div class="text">
+              <p>Alex Browne</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team1.webp" alt="">
+
+            <div class="text">
+              <p>Tom Hanks</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team2.jpg" alt="">
+
+            <div class="text">
+              <p>Alex Browne</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team1.webp" alt="">
+
+            <div class="text">
+              <p>Tom Hanks</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team2.jpg" alt="">
+
+            <div class="text">
+              <p>Alex Browne</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team1.webp" alt="">
+
+            <div class="text">
+              <p>Tom Hanks</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team2.jpg" alt="">
+
+            <div class="text">
+              <p>Alex Browne</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide-image">
+            <img src="img/team1.webp" alt="">
+
+            <div class="text">
+              <p>Tom Hanks</p>
+              <h6>Founder & CEO</h6>
+              <a href="">Lear More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   
 
