I haven't finished yet

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#ourPrice">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#">Contact</a>
+                  <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link animate__animated animate__slideInUp animate_delay-3s" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -635,10 +635,11 @@
   </section>
   <section id="contact">
     <div class="container">
-      <h3>contact us</h3>
-      <p>Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <h3 class="contact-title">contact us</h3>
+      <p class="title-p">Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       <div class="row">
-        <div class="contact-info col-md-6 col-lg-6 col-sm-12">
+
+        <div class="contact-info col-md-4 col-lg-4 col-sm-12 ms-auto">
 
           <h3>Contact Info</h3>
           <p>125, Park street avenue, Brocklyn, Newyork.</p>
@@ -647,7 +648,7 @@
             <p>+11253678958</p>
           </div>
           <div class="phone-email">
-            <i class="fa-solid fa-phone"></i>
+            <i class="fa-solid fa-envelope"></i>
             <p>info@mail.com</p>
           </div>
           <h3>Social Partner</h3>
@@ -659,9 +660,76 @@
           </div>
 
         </div>
-        <div class="contact-form">
-          
+        <div class="contact-form col-md-7 col-lg-5 col-sm-12 me-auto">
+
+          <h3>Leave Us A Massage Here</h3>
+          <form action="">
+
+            <div class="registr">
+              <input type="text" placeholder="First name">
+              <input type="text" placeholder="Last name">
+              <input type="email" placeholder="Email">
+              <input type="number" placeholder="Phone">
+            </div>
+            <textarea name="" id="" cols="41" rows="7" placeholder="Message"></textarea>
+            <button type="submit">Send Message</button>
+
+          </form>
         </div>
+      </div>
+    </div>
+  </section>
+  <section id="want">
+    <h1>Want To Start A New Project With Us? Let's Start!</h1>
+    <a href="" class="btn">Start Now</a>
+  </section>
+  <section id="footer">
+    <div class="row">
+      <div class="footer1 col-lg-4 col-md-6 col-sm-12">
+        <img src="img/logo.png" alt="">
+        <p>Lorem ipsum dolor sit amt conetur adcing elit. Sed do eiusod tempor utslr. Ut laboris nisi ut aute irure dolor in rein velit esse.</p>
+        <div class="footer-icons">
+          <div class="square">
+            <i class="fa-brands fa-facebook"></i>
+          </div>
+          <div class="square">
+            <i class="fa-brands fa-google"></i>
+          </div>
+          <div class="square">
+            <i class="fa-brands fa-invision"></i>
+          </div>
+          <div class="square">
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+        </div>
+      </div>
+      <div class="footer2 col-lg-2 col-md-6 col-sm-12">
+        <h3>Useful Links</h3>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="footer3 col-lg-3 col-md-6 col-sm-12">
+        <h3>From The News</h3>
+        <a href="">The pros and Cons of Starting an Online Business.</a>
+        <h6>12th June 2017</h6>
+        <hr>
+        <a href="">The pros and Cons of Starting an Online Business.</a>
+        <h6>12th June 2017</h6>
+
+      </div>
+      <div class="footer4 col-lg-3 col-md-6 col-sm-12">
+        <h3>Our Newsletter</h3>
+        <p>Subscribe to our newsletter to get the latest News and offers..</p>
+        <form action="">
+          <input type="email" placeholder="Email Address">
+          <button class="submit">GO</button>
+        </form>
       </div>
     </div>
   </section>
